third_party/move/move-compiler/transactional-tests/tests/warnings-are-errors/shadowing_renamed.exp
processed 2 tasks

task 0 'publish'. lines 1-19:
Error: warning[W09003]: unused assignment
  ┌─ TEMPFILE:8:13
  │
8 │         let x = 1;
  │             ^ Unused assignment or binding for local 'x'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_x')



task 1 'run'. lines 21-21:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
